--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -106,7 +106,7 @@ a.filled-button:hover {
 
 #preloader {
   overflow: hidden;
-  background: #f33f3f;
+  background: #32393d;
   left: 0;
   right: 0;
   top: 0;
@@ -575,6 +575,13 @@ header .navbar {
 
 /* Footer */
 
+footer {
+  margin-top: 20px;
+  bottom: 0;
+  width: 100%;
+  height: 163px;
+}
+
 .form-outline .form-control {
   border: 2px solid white;
 }
@@ -640,7 +647,7 @@ header .navbar {
 	left:0;
 	bottom:0;
 	right:0;
-	background-color:rgba(0,0,0,.7);
+	background-color: rgb(0 0 0 / 57%);
 }
 .page-heading .container {
 	position:relative;
