--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="text-content">
-              <h4>about us</h4>
+              <h4>about  usabout  usabout  us</h4>
               <h2>our company</h2>
             </div>
             <div class="text-content">
