--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 
 <!-- Page Content -->
     <div class="page-heading about-heading header-text" style="background-image: url(https://i.ibb.co/zhQ2yxY/2021-Cadillac-Escalade-17028-1.jpg);">
