--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -14,6 +14,10 @@
       <p>Age: Kitten</p>
     {% endif %}
   </div>
+  <div class="card-action">
+    <a href="{% url 'cars_update' car.id %}">Edit</a>
+    <a href="{% url 'cars_delete' car.id %}">Delete</a>
+  </div>
 </div>
 
 {% endblock %}
