--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -308,7 +308,8 @@ header .navbar {
 .banner {
 	position: relative;
 	text-align: center;
-	padding-top: 80px;
+	padding-top: 0;
+	margin-top: -10px;
 }
 
 .banner-item-01 {
@@ -654,6 +655,7 @@ footer {
 
 .page-heading {
 	position:relative;
+	margin-top: -10px;
 }
 .page-heading:before {
 	content:'';
