--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -5,13 +5,13 @@
 
 <div class="card">
   <div class="card-content">
-    <span class="card-title">{{ car.name }}</span>
-    <p>Breed: {{ car.breed }}</p>
-    <p>Description: {{ car.description }}</p>
-    {% if car.age > 0 %}
-      <p>Age: {{ car.age }}</p>
+    <span class="card-title">{{ car.make }}</span>
+    <p>Model: {{ car.model }}</p>
+    <p>Passenger: {{ car.passenger }}</p>
+    {% if car.luggage > 0 %}
+      <p>Luggage: {{ car.luggage }}</p>
     {% else %}
-      <p>Age: Kitten</p>
+      <p>Luggage: Kitten</p>
     {% endif %}
   </div>
   <div class="card-action">
@@ -19,5 +19,18 @@
     <a href="{% url 'cars_delete' car.id %}">Delete</a>
   </div>
 </div>
+<!-- Insert photo markup below this comment -->
+{% for photo in car.photo_set.all %}
+  <img class="responsive-img card-panel" src="{{photo.url}}">
+{% empty %}
+  <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+{% endfor %}
+<!-- new code below -->
+<form action="{% url 'add_photo' car.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+    {% csrf_token %}
+    <input type="file" name="photo-file">
+    <br><br>
+    <input type="submit" class="btn" value="Upload Photo">
+</form>
 
 {% endblock %}
