--- a/main_app/templates/cars/index.html
+++ b/main_app/templates/cars/index.html
@@ -9,13 +9,13 @@
   <!-- add this single line below -->
   <a href="{% url 'detail' car.id %}">
     <div class="card-content">
-      <span class="card-title">{{ car.name }}</span>
-      <p>Breed: {{ car.breed }}</p>
-      <p>Description: {{ car.description }}</p>
-      {% if car.age > 0 %}
-        <p>Age: {{ car.age }}</p>
+      <span class="card-title">{{ car.make }}</span>
+      <p>Model: {{ car.model }}</p>
+      <p>Passenger: {{ car.passenger }}</p>
+      {% if car.luggage > 0 %}
+        <p>Luggage: {{ car.luggage }}</p>
       {% else %}
-        <p>Age: Kitten</p>
+        <p>Luggage: Kitten</p>
       {% endif %}
     </div>
   <!-- and this following one as well -->
