--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -10,9 +10,7 @@
         <div class="banner-item-01">
           <div class="text-content">
             <h4>Find your car today!</h4>
-            <h2>
-              {{ user }}
-            </h2>
+            <h2>Lorem ipsum dolor sit amet</h2>
           </div>
         </div>
         <div class="banner-item-02">
