--- a/main_app/templates/main_app/car_confirm_delete.html
+++ b/main_app/templates/main_app/car_confirm_delete.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>Delete Car</h1>
 
-  <h4>Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
+  <h4>Are you sure you want to delete <span class="teal-text">{{object.make}}/{{object.model}}</span>?</h4>
 
   <form action="" method="POST">
     {% csrf_token %}
