--- a/main_app/templates/main_app/car_form.html
+++ b/main_app/templates/main_app/car_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <!-- New if/else block -->
   {% if object %}
-    <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+    <h1>Edit <span class="teal-text">{{object.make}}/{{object.model}}</span></h1>
   {% else %}
     <h1>Add Car</h1>
   {% endif %}
