--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -56,7 +56,7 @@
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Electri<em>Cars</em></h2></a>
+          <a class="navbar-brand" href="{% url 'home' %}"><h2>Electri<em>Cars</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
