--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -7,7 +7,7 @@
   <div class="card-content">
     <span class="card-title">{{ car.make }}</span>
     <p>Model: {{ car.model }}</p>
-    <p>Passenger: {{ car.passenger }}</p>
+    <p>Passenger: {{ car.passengers }}</p>
     {% if car.luggage > 0 %}
       <p>Luggage: {{ car.luggage }}</p>
     {% else %}
