--- a/main_app/templates/accounts/profile.html
+++ b/main_app/templates/accounts/profile.html
@@ -1,6 +1,8 @@
 <h1>
   {{user}}
   {{user.email}}
-  {{user.password}}
+  {{user.profile.bio}}
+  {{user.bio}}
+  {{user.first_name}}
   {{user.last_name}}
 </h1>
