--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,6 +17,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 
+
     <!-- Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -37,6 +38,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/fontawesome.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/owl.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 
   </head>
 
@@ -68,7 +70,9 @@
                     </a>
                 </li> 
                 <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Cars</a></li>
+                {% if user.is_superuser %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'cars_create' %}">Add Car</a></li>
+                {% endif %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About Us</a></li>
                 {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact Us</a></li> {% endcomment %}
                 {% if user.is_authenticated %}
