--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -35,7 +35,7 @@
     />
 
     <!-- materialize date picker for booking --->
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
     <!-- Additional CSS Files -->
